--- a/css/styles.css
+++ b/css/styles.css
@@ -14,106 +14,119 @@ html {
 }
 
 body {
-  background-color: hsl(0, 0%, 100%);
-  background-repeat: no-repeat;
+  margin: 0;
+  display: flex;
   height: 100vh;
+  flex-direction: column;
+  background-repeat: no-repeat;
+  background: linear-gradient(0.25turn, #e5e1bc, #e2e2e0, #c63d76);
 }
 
-h1 {
-  font-family: "Akronim", sans-serif;
-  font-size: 55px;
+.header, .footer {
+  height: 100px;
+  display: flex;
   color: #CC313D;
-  text-shadow: #FC0 1px 0 10px;
+  user-select: none;
+  padding-top: 15px;
+  align-items: center;
+  justify-content: center;
+  font-family: "Akronim", sans-serif;
+  background-color: rgba(239, 217, 217, 0.747);
+}
+
+.header {
+  font-size: 35px;
+  border-bottom: 2mm ridge rgb(205, 50, 71);
+}
+
+.footer {
+  font-size: 20px;
+  border-top: 2mm ridge rgb(205, 50, 71);
 }
 
 .main-container {
+  flex: 1;
   width: 460px;
   display: flex;
+  margin: 0 auto;
+  align-items: center;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  margin: 0 auto;
 }
 
 .display {
+  border: none;
+  padding: 15px;
   user-select: none;
   background-color: #CC313D;
-  padding: 15px;
-  border: none;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
-  box-shadow: 0 6px 6px #958f8f;
+  box-shadow: 0 6px 6px #090909;
 }
 
 .minor-display,
 .major-display {
   padding: 8px;
   width: 430px;
-  text-align: right;
+  display: flex;
   font-size: 50px;
+  text-align: right;
+  align-items: center;
+  justify-content: flex-end;
   background-color: white;
 }
 
 .minor-display {
   height: 50px;
+  font-size: 40px;
+  color: #CC313D;
+  overflow: hidden;
+  white-space: nowrap;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
   font-family: "Rationale", sans-serif;
-  font-weight: 200;
-  font-size: 40px;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  color: #CC313D;
+  box-shadow: inset -9px 20px 35px 1px rgba(198, 11, 11, 0.397);
 }
 
 .major-display {
   height: 70px;
-  font-family: "Iceberg", sans-serif;
+  font-size: 60px;
+  color: #CC313D;
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
-  font-weight: 300;
-  font-size: 60px;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  color: #CC313D;
-}
-
-.minor-display {
-  display: flex;
-  justify-content: flex-end;
-  white-space: nowrap;
-  overflow: hidden;
+  font-family: "Iceberg", sans-serif;
+  text-shadow: 1px 1px 2px rgb(69, 67, 67), 0 0 1em rgb(212, 196, 196),
+    0 0 0.2em rgb(236, 228, 228);
+  box-shadow: inset -12px -20px 45px 1px rgba(195, 52, 52, 0.456);
 }
 
 .buttons {
+  gap: 10px;
+  border: none;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
   align-items: center;
-  background-color: #CC313D;
-  gap: 10px;
+  justify-content: center;
   padding: 0 10px 10px 10px;
-  border: none;
-  box-shadow: 0 6px 6px #958f8f;
+  background-color: #CC313D;
+  box-shadow: 0 6px 6px #1d1c1c;
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
 }
 
 .btn {
-  flex-basis: 100px;
   height: 75px;
-  font-size: 40px;
-  font-family: "Joti One", sans-serif;
-  background-color: #CC313D;
-  color: white;
-  text-shadow: 1px 1px 2px rgb(89, 85, 85), 0 0 0.1em rgb(255, 255, 255);
   border: none;
-  border-radius: 20px;
-  box-shadow: -2px -2px 2px #af9d9e, 2px 2px 5px #a91622;
+  color: white;
+  font-size: 40px;
   cursor: pointer;
+  flex-basis: 100px;
   user-select: none;
+  border-radius: 20px;
+  background-color: #CC313D;
+  font-family: "Joti One", sans-serif;
+  box-shadow: -2px -2px 2px #af9d9e, 2px 2px 5px #a91622;
+  text-shadow: 1px 1px 2px rgb(89, 85, 85), 0 0 0.1em rgb(255, 255, 255);
 }
 
 .btn:hover {
