--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ html {
 
 body {
   margin: 0;
+  width: 100%;
   display: flex;
   height: 100vh;
   flex-direction: column;
@@ -22,11 +23,11 @@ body {
   background: linear-gradient(0.25turn, #e5e1bc, #e2e2e0, #c63d76);
 }
 
-.header, .footer {
+.header,
+.footer {
   display: flex;
   color: #CC313D;
   user-select: none;
-  padding-top: 15px;
   align-items: center;
   justify-content: center;
   font-family: "Akronim", sans-serif;
@@ -34,25 +35,22 @@ body {
 }
 
 .header {
-  height: 70px;
-  font-size: 26px;
-  border-bottom: 2mm ridge rgb(205, 50, 71);
+  height: 100px;
+  font-size: 60px;
+  font-weight: bold;
 }
 
 .footer {
-  height: 50px;
-  font-size: 16px;
-  border-top: 2mm ridge rgb(205, 50, 71);
+  height: 70px;
+  font-size: 40px;
+  font-weight: bold;
 }
 
 .main-container {
   flex: 1;
   width: 460px;
-  display: flex;
   margin: 0 auto;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
+  padding: 50px 0;
 }
 
 .display {
