--- a/css/styles.css
+++ b/css/styles.css
@@ -38,12 +38,14 @@ body {
   height: 100px;
   font-size: 60px;
   font-weight: bold;
+  border-bottom: 1.5mm ridge #CC313D;
 }
 
 .footer {
   height: 70px;
   font-size: 40px;
   font-weight: bold;
+  border-top: 1.5mm ridge #CC313D;
 }
 
 .main-container {
